--- a/Task4_STEBENKOV_BIN-22-1.ipynb
+++ b/Task4_STEBENKOV_BIN-22-1.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -61,25 +61,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.5.2)\n",
-      "Requirement already satisfied: seaborn in /usr/local/lib/python3.10/dist-packages (0.13.2)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (1.13.1)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.5.0)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /usr/local/lib/python3.10/dist-packages (from seaborn) (3.8.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.54.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.0)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: pandas in c:\\users\\vitya\\anaconda3\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\vitya\\anaconda3\\lib\\site-packages (1.4.2)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\vitya\\anaconda3\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\vitya\\anaconda3\\lib\\site-packages (1.13.1)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from scikit-learn) (2.2.0)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from seaborn) (3.8.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (23.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.0.9)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vitya\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "jRIYpXVFkgu0"
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -205,7 +205,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "p7sGbiRdj0wt"
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "IJMKbFvakQ8O"
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
        "{0: 1793}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "id": "_F7eCTuRlOOU"
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "id": "VjaNWBftlgwG"
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "id": "oBb_XE0ml6eq"
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "id": "g73T_SCjmCRf"
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -638,7 +638,7 @@
        "{0: 82, 1: 70}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "id": "AxDEOjGOrOPw"
    },
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "id": "QnQkGq9MrQnA"
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1031,7 +1031,7 @@
        "       [14, 62]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1067,7 +1067,7 @@
        " 'ROC-AUC': 0.86}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "id": "zY3rLPEGtK4s"
    },
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "id": "iqEGh4gatpWF"
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1508,7 +1508,7 @@
        "[6000 rows x 20 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "id": "pFeNDLPwtAoX"
    },
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1659,7 +1659,7 @@
        "0.955"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1685,7 +1685,7 @@
        "0.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2056,7 +2056,7 @@
        "[6000 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,34 +2083,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 272
-    },
-    "id": "yp8py1BtXmzG",
-    "outputId": "f3e1c573-adf9-416d-bc3d-afb832f288f8"
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_resampled' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m y_resampled\u001b[38;5;241m.\u001b[39mvalue_counts()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_resampled' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "y_resampled.value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2147,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "id": "8L_94dMRPH_P"
    },
@@ -2167,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2199,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2221,7 +2193,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2431,46 +2403,46 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.46      0.40      0.42       842\n",
-      "           1       0.73      0.72      0.73       819\n",
-      "           3       0.38      0.40      0.39       846\n",
-      "           4       0.46      0.24      0.32       822\n",
-      "           5       0.47      0.73      0.57       808\n",
+      "           0       0.46      0.39      0.42       842\n",
+      "           1       0.73      0.73      0.73       819\n",
+      "           3       0.37      0.46      0.41       846\n",
+      "           4       0.49      0.27      0.35       822\n",
+      "           5       0.48      0.63      0.55       808\n",
       "\n",
       "    accuracy                           0.50      4137\n",
-      "   macro avg       0.50      0.50      0.49      4137\n",
-      "weighted avg       0.50      0.50      0.48      4137\n",
+      "   macro avg       0.51      0.50      0.49      4137\n",
+      "weighted avg       0.50      0.50      0.49      4137\n",
       "\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.47      0.44      0.45       823\n",
-      "           1       0.76      0.72      0.74       828\n",
-      "           3       0.40      0.37      0.38       833\n",
-      "           4       0.47      0.29      0.36       831\n",
+      "           0       0.47      0.43      0.45       823\n",
+      "           1       0.76      0.74      0.75       828\n",
+      "           3       0.40      0.40      0.40       833\n",
+      "           4       0.49      0.28      0.36       831\n",
       "           5       0.47      0.73      0.57       822\n",
       "\n",
-      "    accuracy                           0.51      4137\n",
-      "   macro avg       0.51      0.51      0.50      4137\n",
-      "weighted avg       0.51      0.51      0.50      4137\n",
+      "    accuracy                           0.52      4137\n",
+      "   macro avg       0.52      0.52      0.51      4137\n",
+      "weighted avg       0.52      0.52      0.51      4137\n",
       "\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.46      0.40      0.42       817\n",
-      "           1       0.77      0.73      0.75       835\n",
-      "           3       0.36      0.36      0.36       803\n",
-      "           4       0.49      0.26      0.34       829\n",
-      "           5       0.47      0.77      0.58       852\n",
+      "           0       0.45      0.40      0.43       817\n",
+      "           1       0.77      0.74      0.75       835\n",
+      "           3       0.34      0.45      0.38       803\n",
+      "           4       0.46      0.23      0.31       829\n",
+      "           5       0.51      0.68      0.58       852\n",
       "\n",
-      "    accuracy                           0.51      4136\n",
+      "    accuracy                           0.50      4136\n",
       "   macro avg       0.51      0.50      0.49      4136\n",
-      "weighted avg       0.51      0.51      0.49      4136\n",
+      "weighted avg       0.51      0.50      0.49      4136\n",
       "\n",
-      "K-Fold Cross-Validation - Средняя точность: 0.5045126718093561\n",
-      "Точности по каждому фолду: [0.49746192893401014, 0.5093062605752962, 0.5067698259187621]\n"
+      "K-Fold Cross-Validation - Средняя точность: 0.5042703858045688\n",
+      "Точности по каждому фолду: [0.49746192893401014, 0.5155910079767948, 0.49975822050290136]\n"
      ]
     }
    ],
@@ -2485,7 +2457,7 @@
     "id": "1BEO2UW_fr6B"
    },
    "source": [
-    "Oversampling в данном случае сделал тоько хуже. Возможно из-за очень большого количества сгенерированных данных"
+    "В Oversampling средняя точность меньше, чем средняя точность без балансировки"
    ]
   },
   {
@@ -2585,7 +2557,7 @@
     "id": "GoWH0QcvgHMd"
    },
    "source": [
-    "Undersampling же очень сильно повысил точность"
+    "Undersampling сильно повысил точность"
    ]
   },
   {
